package ma.ehtp.gestionrisqueit.modelles;public class ITRiskElement {
}
