package ma.ehtp.gestionrisqueit.modelles;public class MajorFact {
}
